[package]
name = 'skw-contract-sdk'
version = '0.1.0'
authors = ['SkyeKiwi <hello@skye.kiwi>', "Near Inc <max@nearprotocol.com>"]
edition = '2021'
homepage = 'https://skye.kiwi'
repository = 'https://github.com/skyekiwi/skyekiwi-network'
license = 'GPL-3.0'
readme = 'README.md'
description = """
Rust library for writing SKW smart contracts.
"""

[[test]]
name = "compilation_tests"
path = "compilation_tests/all.rs"

[dependencies]
# Provide near_bidgen macros.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.13"
borsh = "0.9"
bs58 = "0.4"

# Export dependencies for contracts
wee_alloc = { version = "0.4.5", default-features = false, optional = true }

# Used for caching, might be worth porting only functionality needed.
once_cell = { version = "1.8", optional = true, default-features = false }

skw-contract-macros = { path = "../skw-contract-macros" }
skw-contract-sys = { path = "../skw-contract-sys", version = "0.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
skw-vm-host = { path = "../skw-vm-host" }
skw-vm-primitives = { path = "../skw-vm-primitives" }

[dev-dependencies]
rand = "0.8.4"
trybuild = "1.0"
rustversion = "1.0"
rand_xorshift = "0.3"
quickcheck = "1.0"
arbitrary = { version = "1.0", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }

[features]
default = ["wee_alloc"]
expensive-debug = []
# unstable = ["once_cell"]
