[package]
name = "skw-sdk-sim"
version = '0.1.0'
authors = ['SkyeKiwi <hello@skye.kiwi>', "Near Inc <max@nearprotocol.com>"]
edition = '2018'
homepage = 'https://skye.kiwi'
repository = 'https://github.com/skyekiwi/skyekiwi-network'
license = 'GPL-3.0'
readme = 'README.md'
description = """
NEAR Simulator & cross-contract testing library
"""

[dependencies]
skw-contract-sdk = { path = "../skw-contract-sdk" }
skw-vm-host = { path = "../skw-vm-host" }
skw-vm-store = { path = "../skw-vm-store" }
skw-vm-primitives = { path = "../skw-vm-primitives" }


near-crypto = "=0.1.0"
near-pool = "=0.1.0-pre.1"

lazy-static-include = "3"
# Temporary workaround see https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
fungible-token = { path="../examples/fungible-token/ft" }

[features]
default = []
no_sim = []
no_contract_cache = []
