[package]
name = "skw-contract-sys"
version = "0.1.0"
authors = ['SkyeKiwi <https://github.com/skyekiwi>']
edition = '2021'
homepage = 'https://skye.kiwi'
license = 'GPL-3.0'
readme = 'README.md'
repository = 'https://github.com/skyekiwi/skyekiwi-network'
description = """
Syscall definitions for builtin functions of the SKW runtime.
"""

[dependencies]
