[package]
name = "skw_crypto"
authors = ['SkyeKiwi <hello@skye.kiwi>']
version = "0.1.0"
edition = "2018"
license = 'GPL-3.0'

[dependencies]
skw_types =  { path = "../skw-sgx-types" }
rand = { version="0.8.4", default-features=false }
sgx_rand = { path = "../../teaclave-sgx-sdk/sgx_rand" }
sgx_tstd = { path = "../../teaclave-sgx-sdk/sgx_tstd" }
x25519-dalek = { version = "2.0.0-pre.1", default-features=false, features=["u64_backend"]}
xsalsa20poly1305 = "0.8"

zeroize = { version = "=1.4.2", default-features = false }

[dev-dependencies]


[features]
default = []
