[package]
name = "skw_driver"
authors = ['SkyeKiwi <hello@skye.kiwi>']
version = "0.1.0"
edition = "2018"
license = 'GPL-3.0'

[dependencies]
skw_types =  { path = "../skw-sgx-types" }
rand = { version="0.8.4", default-features=false }

sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_rand = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }

[dev-dependencies]


[features]
default = []
