[package]
name = "skw_sgx_driver"
authors = ['SkyeKiwi <hello@skye.kiwi>']
version = "0.1.0"
edition = "2018"
license = 'GPL-3.0'

[dependencies]
rand = { version="0.8.4", default-features=false }
hmac-sha256 = { version = "1.1.1", default-features = false }
x25519-dalek = { version = "2.0.0-pre.1", default-features=false, features=["u64_backend"]}
xsalsa20poly1305 = "0.8"

libflate = { git = "https://github.com/mesalock-linux/libflate-sgx" }
sgx_rand = { git = 'https://github.com/apache/teaclave-sgx-sdk.git' }
sgx_tstd = { git = 'https://github.com/apache/teaclave-sgx-sdk.git' }
sgx_tunittest = { git = 'https://github.com/apache/teaclave-sgx-sdk.git' }

[dev-dependencies]

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_rand = { path = "../../teaclave-sgx-sdk/sgx_rand" }
sgx_tstd = { path = "../../teaclave-sgx-sdk/sgx_tstd" }
sgx_tunittest = { path = "../../teaclave-sgx-sdk/sgx_rand" }

[features]
default = []
