[package]
name = "skw_ipfs"
version = "0.1.0"
edition = "2018"

[dependencies]
skw_types =  { path = "../skw-sgx-types" }
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.105", features = ["derive"] }
hashbrown = { version = "0.11" }
[dev-dependencies]

[features]
default = []
