[package]
name = "skw-vm-interface"
version = '0.1.0'
authors = ['SkyeKiwi <hello@skye.kiwi>', "Near Inc <max@nearprotocol.com>"]
edition = '2018'
homepage = 'https://skye.kiwi'
repository = 'https://github.com/skyekiwi/skyekiwi-network'
license = 'GPL-3.0'
readme = 'README.md'
description = """
NEAR Simulator & cross-contract testing library
"""

[dependencies]
skw-contract-sdk = { path = "../skw-contract-sdk" }

skw-vm-host = { path = "../skw-vm-host" }
skw-vm-store = { path = "../skw-vm-store" }
skw-vm-primitives = { path = "../skw-vm-primitives" }
skw-vm-runtime = { path = "../skw-vm-runtime" }
skw-vm-pool = { path = "../skw-vm-pool" }

lazy-static-include = "3"
# Temporary workaround see https://github.com/bitvecto-rs/bitvec/issues/105
funty = "=1.1.0"

borsh = { version = "0.9", features = ["rc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
tracing-span-tree = "0.1"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
# fungible-token = { path="../skw-contract-sdk/examples/fungible-token/ft" }

[features]
default = []
no_sim = []
no_contract_cache = []
