[package]
name = "skw-vm-interface"
version = '0.1.0'
authors = ['SkyeKiwi <hello@skye.kiwi>', "Near Inc <max@nearprotocol.com>"]
edition = '2018'
homepage = 'https://skye.kiwi'
repository = 'https://github.com/skyekiwi/skyekiwi-network'
license = 'GPL-3.0'
readme = 'README.md'
description = """
NEAR Simulator & cross-contract testing library
"""

[dependencies]
skw-blockchain-primitives = { path = "../skw-blockchain-pallets/primitives", default-features = false}
skw-contract-sdk = { path = "../skw-contract-sdk", default-features = false}
skw-vm-host = { path = "../skw-vm-host", default-features = false}
skw-vm-store = { path = "../skw-vm-store", default-features = false}
skw-vm-primitives = { path = "../skw-vm-primitives", default-features = false}
skw-vm-runtime = { path = "../skw-vm-runtime", default-features = false}
skw-vm-pool = { path = "../skw-vm-pool", default-features = false}

hex = { version = "0.4", default-features = false }

lazy-static-include = "3"
bs58 = { version = "0.4.0", default-features = false} 
clap = { version = "3.1.16", features = ["derive"] }
tracing-span-tree = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocket = "0.5.0-rc.2"
lazy_static = "1.4.0"

[dev-dependencies]
# fungible-token = { path="../skw-contract-sdk/examples/fungible-token/ft" }

[features]
default = []
contract-sim = []
web-interface = []
