[package]
name = "skw-vm-primitives"
version = "0.1.0"
authors = ["SkyeKiwi <hello@skye.kiwi>"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/skyekiwi/skyekiwi-network"
homepage = "https://github.com/skyekiwi/skyekiwi-network"
description = """
Primitives types for the SkyeKiwi Network Secret Contracts
"""

[dependencies]
byteorder = "1.3"
base64 = "0.11"
bs58 = { version = "0.4"}
sha2 = { version = "0.9", default-features = false}

skw-blockchain-primitives = { path = "../skw-blockchain-pallets/primitives", default-features = false}
num-rational = { version = "0.3.1", features = ["serde"], default-features = false}

wasmi = { version = "0.11.0", default-features = false }
serde = { version = "1", features = ["derive", "rc"], optional = true }
borsh = { version = "0.9", features = ["rc"], optional = true }
parity-secp256k1 = { version = "0.7", default-features = false }

smart-default = "0.6"
hex = "0.4"
derive_more = "0.99.3"
deepsize = { version = "0.2.0", optional = true }
rand_core = "0.5"
rand = "0.7"

curve25519-dalek = "3"
ed25519-dalek = { version = "1.0.1" }

primitive-types = "0.10"
once_cell = "1.5.2"
libc = "0.2"
serde_json = "1"
thiserror = "1"
schnorrkel = { version = "0.10.2", features = ["u64_backend"], default-features = false }

[dev-dependencies]
hex-literal = "0.2"
sha2 = ">=0.8,<0.10"

[features]
default = ["std", "serde", "borsh"]
std = [
  "sha2/std",
  "num-rational/std",
  "serde/std",
  "schnorrkel/std",
]
