[package]
name = "skw-vm-primitives"
version = "0.1.0"
authors = ["SkyeKiwi <hello@skye.kiwi>"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/skyekiwi/skyekiwi-network"
homepage = "https://github.com/skyekiwi/skyekiwi-network"
description = """
Primitives types for the SkyeKiwi Network Secret Contracts
"""

[dependencies]
byteorder = { version = "1", default-features = false }
base64 = { version = "0.11", default-features = false }
bs58 = { version = "0.4", default-features = false }
sha2 = { version = "0.9", default-features = false }

skw-blockchain-primitives = { path = "../skw-blockchain-pallets/primitives", default-features = false}
num-rational = { version = "0.3.1", features = ["serde"], default-features = false}

wasmi = { version = "0.11.0", default-features = false }
serde = { version = "1", features = ["derive", "rc", "alloc"], default-features = false, optional = true }
borsh = { version = "0.9", default-features = false, optional = true }

smart-default = { version = "0.6", default-features = false }
hex = { version = "0.4", default-features = false }
derive_more = { version = "0.99.3", default-features = false, features = ["as_ref"] }

curve25519-dalek = { version = "3", default-features = false, features = ["u64_backend"] }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"]}
schnorrkel = { version = "0.10.2", features = ["u64_backend"], default-features = false }

getrandom = { version = "0.2", features = ["js"], default-features = false}
thiserror = "1"

[dev-dependencies]
hex-literal = "0.2"
sha2 = ">=0.8,<0.10"
serde_json = "1"

[features]
default = ["std", "serde", "borsh"]
std = [
  "byteorder/std",
  "base64/std",
  "bs58/std",
  "sha2/std",
  "num-rational/std",
  "wasmi/std",
  "serde/std",
  "borsh/std",
  "hex/std",
  "schnorrkel/std",
]
