[package]
name = "skw-vm-runtime"
version = "0.0.0"
license = "GPL-3.0"
authors = ["SkyeKiwi <hello@skye.kiwi>", "Near Inc <hello@nearprotocol.com>"]
publish = false
edition = "2021"

[dependencies]
byteorder = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tracing = "0.1"
rand = "0.7"
once_cell = "1.5.2"
num-rational = "0.3"
num-bigint = "0.3"
num-traits = "0.2.11"
hex = "0.4.2"
rayon = "1.5"
thiserror = "1.0"

borsh = "0.9"

skw-vm-genesis-configs = { path = "../skw-vm-genesis-configs" }
skw-vm-store = { path = "../skw-vm-store" }
skw-vm-host = { path = "../skw-vm-host" }
skw-vm-engine = { path = "../skw-vm-engine" }
skw-vm-primitives = { path = "../skw-vm-primitives" }

[features]
default = []
sandbox = []

[dev-dependencies]
tempfile = "3"
serde_json = "^1.0.40"
base64 = "0.11"
indicatif = {version = "0.15.0", features = ["with_rayon"]}
rayon = "^1.1"
assert_matches = "1.3"
near-test-contracts = { path = "../near-test-contracts" }
