[package]
name = "app"
version = "1.0.0"
authors = ["SkyeKiwi <hello@skye.kiwi>"]
build = "build.rs"

[dependencies]
skw_ipfs = { path = "../../crates/skw-sgx-ipfs" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk" }
