[package]
name = "skw_enclave"
version = "1.0.0"
authors = ['SkyeKiwi <hello@skye.kiwi>']
description = 'The SkyeKiwi Protocol in Intel SGX Enclave'
homepage = 'https://skye.kiwi'
license = 'GPL-3.0'
readme = 'README.md'
repository = 'https://github.com/skyekiwi/skyekiwi-protocol-enclave'

[lib]
name = "skyekiwiprotocolenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
skw_sgx_driver = { path = "../crates/skw-sgx-driver" }
