[package]
name = "skw_sgx_host"
version = "1.0.0"
authors = ["SkyeKiwi <hello@skye.kiwi>"]
build = "build.rs"

[dependencies]
skw_sgx_ipfs = { path = "../../crates/skw-sgx-ipfs" }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_urts = { path = "../../teaclave-sgx-sdk/sgx_urts" }
sgx_types = { path = "../../teaclave-sgx-sdk/sgx_types" }